Make LSTM compatible

--- a/ParameterEstimation_Coronavirus_SEIDR.ipynb
+++ b/ParameterEstimation_Coronavirus_SEIDR.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.regularizers import l2\n",
-    "from tensorflow.keras.utils import to_categorical\n",
     "import tensorflow.contrib.eager as tfe\n",
     "from functools import partial\n",
     "import pandas as pd\n",
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +91,7 @@
     "    \n",
     "\n",
     "    \n",
-    "    theta = np.random.uniform(low=[0.75, 0.1, 0.1, 0.01, 0.05], \n",
+    "    theta = np.random.uniform(low=[0.8, 0.1, 0.1, 0.01, 0.05], \n",
     "                              high=[2.25, 1.0, 0.75, 0.4, 1.0], size=(batch_size, 5))\n",
     "    \n",
     "    return theta\n",
@@ -128,11 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def data_generator(batch_size, t_obs=None, t_min=30, t_max=100, to_tensor=True, **args):\n",
+    "def data_generator(batch_size, t_obs=None, t_min=30, t_max=100, dt=1, to_tensor=True, **args):\n",
     "    \"\"\"\n",
     "    Runs the forward model 'batch_size' times by first sampling fromt the prior\n",
     "    theta ~ p(theta) and running x ~ p(x|theta).\n",
@@ -155,8 +154,6 @@
     "    if t_obs is None:\n",
     "        t_obs = np.random.randint(t_min, t_max+1)\n",
     "    \n",
-    "   \n",
-    "    dt = 1\n",
     "    t = np.linspace(0, t_obs, int(t_obs/dt) + 1)\n",
     "    \n",
     "    # Generate data\n",
@@ -179,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,13 +216,15 @@
     "n_samples_posterior = 2000\n",
     "clip_value = 5.\n",
     "\n",
-    "starter_learning_rate = 0.001\n",
+    "starter_learning_rate = 0.0005\n",
     "global_step = tfe.Variable(0, dtype=tf.int32)\n",
     "decay_steps = 1000\n",
     "decay_rate = .99\n",
     "learning_rate = tf.train.exponential_decay(starter_learning_rate, global_step, \n",
     "                                           decay_steps, decay_rate, staircase=True)\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)"
+    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
+    "\n",
+    "data_gen = partial(data_generator, t_min=30, t_max=120)"
    ]
   },
   {
@@ -237,21 +236,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 587 ms\n"
+      "Wall time: 222 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "test_data = data_generator(n_test)"
+    "test_data = data_gen(n_test, t_obs=100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -262,9 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:<tensorflow.python.keras.layers.recurrent.LSTM object at 0x0000020EDEA01908>: Note that this layer is not optimized for performance. Please use tf.keras.layers.CuDNNLSTM for better performance on GPU.\n"
+     ]
+    }
+   ],
    "source": [
     "summary_net = SequenceNetwork(summary_meta)\n",
     "model = BayesFlow(inv_meta, n_inv_blocks, theta_dim, summary_net=summary_net, permute=True)"
