fix reconstruction of rho_t in theta

--- a/ParameterEstimation_Coronavirus_SEIDR_timedependent_rho_learn.ipynb
+++ b/ParameterEstimation_Coronavirus_SEIDR_timedependent_rho_learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +120,14 @@
     "    rhos = params[0:3]\n",
     "    rhos_t = params[3:6]\n",
     "    rhos_t_asi = np.argsort(rhos_t)\n",
-    "    rhos = np.exp(rhos[rhos_t_asi])*t.shape[0]\n",
+    "    rhos = np.cumsum(np.exp(rhos[rhos_t_asi]))*t.shape[0]\n",
     "    rhos_t = np.clip(rhos_t[rhos_t_asi].astype(np.int32),0,t.shape[0])\n",
     "    \n",
     "    #construct dense rhos array\n",
     "    rho = np.ones((t.shape[0]))\n",
     "    for i in range(rhos_t.shape[0]):\n",
     "        rho[rhos_t[i]:] = np.tanh(rhos[i])    \n",
-    "    \n",
+    "\n",
     "    beta, alpha, gamma, d = params[6:]\n",
     "    dt = t[1] - t[0]\n",
     "    \n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +186,8 @@
     "    #generate 3 random rhos with decreasing values\n",
     "    rhos = np.random.rand(batch_size,3)*0.6+0.4\n",
     "    rhos = np.arctanh(np.cumprod(rhos,axis=1)*2-1)\n",
-    "    rhos_t = np.random.randint(t_obs-1, size=(batch_size,3))+1\n",
-    "    rhos_t = np.log(rhos_t / np.sum(rhos_t,axis=1,keepdims=True))\n",
+    "    rhos_t = np.random.randint(t_obs-1, size=(batch_size,4))+1\n",
+    "    rhos_t = np.log(rhos_t / np.sum(rhos_t,axis=1,keepdims=True))[:,:3]\n",
     "    \n",
     "    \n",
     "    # construct rhoparam matrix\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,15 +279,521 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 274 ms, sys: 4.18 ms, total: 278 ms\n",
-      "Wall time: 281 ms\n"
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "params.shape (10,)\n",
+      "CPU times: user 448 ms, sys: 60.1 ms, total: 508 ms\n",
+      "Wall time: 473 ms\n"
      ]
     }
    ],
